--- a/jsconfig.json
+++ b/jsconfig.json
@@ -4,6 +4,10 @@
         "module": "esnext",
         "baseUrl": "src"
     },
-    "include": ["src/**/*"],
-    "exclude": ["node_modules"]
+    "include": [
+        "src/**/*"
+    ],
+    "exclude": [
+        "node_modules"
+    ]
 }
