--- a/package.json
+++ b/package.json
@@ -1,25 +1,29 @@
 {
-    "name": "mantis-free-react-admin-template",
+    "name": "accounting",
     "version": "1.1.1",
     "private": true,
-    "homepage": "https://mantisdashboard.io/free",
+    "homepage": "",
     "dependencies": {
         "@ant-design/colors": "^6.0.0",
         "@ant-design/icons": "^4.7.0",
         "@emotion/cache": "^11.10.3",
         "@emotion/react": "^11.10.4",
         "@emotion/styled": "^11.10.4",
+        "@mui/icons-material": "^5.11.16",
         "@mui/lab": "^5.0.0-alpha.100",
         "@mui/material": "^5.10.6",
-        "@reduxjs/toolkit": "^1.8.5",
+        "@mui/x-data-grid": "^6.2.0",
+        "@reduxjs/toolkit": "^1.9.5",
         "@testing-library/jest-dom": "^5.16.5",
         "@testing-library/react": "^13.4.0",
         "@testing-library/user-event": "^14.4.3",
         "apexcharts": "^3.35.5",
         "formik": "^2.2.9",
-        "framer-motion": "^7.3.6",
+        "framer-motion": "^7.10.3",
         "history": "^5.3.0",
+        "jwt-decode": "^3.1.2",
         "lodash": "^4.17.21",
+        "moment": "^2.29.4",
         "prop-types": "^15.8.1",
         "react": "^18.2.0",
         "react-apexcharts": "^1.4.0",
@@ -30,11 +34,13 @@
         "react-element-to-jsx-string": "^15.0.0",
         "react-number-format": "^4.9.4",
         "react-perfect-scrollbar": "^1.5.8",
-        "react-redux": "^8.0.4",
+        "react-redux": "^8.0.5",
         "react-router": "^6.4.1",
         "react-router-dom": "^6.4.1",
         "react-scripts": "^5.0.1",
+        "react-select": "^5.7.2",
         "react-syntax-highlighter": "^15.5.0",
+        "react-toastify": "^9.1.2",
         "react-window": "^1.8.7",
         "redux": "^4.2.0",
         "simplebar": "^5.3.8",
@@ -74,7 +80,8 @@
     },
     "devDependencies": {
         "@babel/core": "^7.19.1",
-        "@babel/eslint-parser": "^7.19.1",
+        "@babel/eslint-parser": "^7.21.3",
+        "@babel/preset-react": "^7.18.6",
         "eslint": "^8.23.1",
         "eslint-config-airbnb-typescript": "^17.0.0",
         "eslint-config-prettier": "^8.5.0",
