--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
         "@mui/lab": "^5.0.0-alpha.100",
         "@mui/material": "^5.10.6",
         "@mui/x-data-grid": "^6.2.0",
+        "@react-pdf/renderer": "^3.1.9",
         "@reduxjs/toolkit": "^1.9.5",
         "@testing-library/jest-dom": "^5.16.5",
         "@testing-library/react": "^13.4.0",
@@ -24,6 +25,7 @@
         "jwt-decode": "^3.1.2",
         "lodash": "^4.17.21",
         "moment": "^2.29.4",
+        "netlify-cli": "^14.2.1",
         "prop-types": "^15.8.1",
         "react": "^18.2.0",
         "react-apexcharts": "^1.4.0",
